install/metrics/grafana-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: runai-drone
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
