install/metrics/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: runai-drone
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.whitehouse-hackathon.runailabs-cs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
